.:[ 0.0.2.29 ]:.

New Features
[x] Basic conditional formatting
[x] ConePad - a very early test runner for LinqPad

Bug Fixes
[x] Now correctly identifies row attributes via IRowData.
[x] Correctly format Flag enumerations

.:[ 0.0.2.28 ]:.
New Features
[x] Action & FuncSpy added, reachable via Helpers.MethodSpy

Bug Fixes
[x] Enum formatting now works as expected.

.:[ 0.0.2.27 ]:.
New Features
[x] FeatureAttribute.GroupAs added.
[x] Pending tests fail when passing.

.:[ 0.0.2.26 ]:.

New Features
[x] Support Verification of Predicate/Func<...,bool> expressions. 

.:[ 0.0.2.25 ]:.

Bug Fixes
[x] Correctly handle errors during fixture creation & setup.

.:[ 0.0.2.24 ]:.

New Features
[x] Dispose disposeable fixtures
[x] ITestCleanup added for automatic fixture cleanup

Bug Fixes
[x] Correctly handle virtual methods when inheriting fixtures

Internal Improvements
[x] Reduced memory footprint and number of objects created during test discovery.

.:[ 0.0.2.23 ]:.

New Features
[x] Support for generic methods when creating custom method expect providers.

Bug Fixes
[x] Properly checking Nullable<T>.HasValue

.:[ 0.0.2.22 ]:.

Changes
[x] Public API pruned to only expose relevant client classes.

New Features
[x] ITestInterceptor introduced for composable Before/After handling
[x] Verification using conversion to bool operator return and display the original object

.:[ 0.0.2.21 ]:.

Changes
[x] run after steps even when before raises an exception.

New Features
[x] Support for verification of objects imblicitly convertable to bool

Bug Fixes
[x] Repport failing subexpression when evaluation paramters

.:[ 0.0.2.20 ]:.

New Features
[x] Flexible pending attributes

Bug Fixes
[x] Custom IMethodExpectProvider detection faile for user code
[x] Subexpression exceptions was wrongly reported as NullSubexpressions leading to much confusion. 

.:[ 0.0.2.19 ]:.

New Features
[x] DisplayClass attribute
[x] Examples row builders
[x] NUnit 2.5.10.11092 support added

Bug Fixes